--- a/MYAPP/src/app/app.component.html
+++ b/MYAPP/src/app/app.component.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hello world</h1>
+  <h1 class="color">{{ title }}</h1>
+  <h1 *ngIf="count > 0"> I am visible if i am greater than 0</h1>
+  <button class="btn" (click)="decreaseCount()">Decrement</button>
+  <button class="btn" (click)="increaseCount()">Increment</button>
+
+  <li *ngFor=" let  number of   listOfNUmbers">{{number}}</li>
+  <li *ngFor=" let  string of   listofcars">{{string}}</li>
 </body>
 </html>
+
+<input type="text"[(ngModel)]="title">
